syntax = "proto3";

package com.github.MaxReX92.go_yandex_gophkeeper;
option go_package = "internal/generated";

message RegisterRequest {
  string name = 1;
  string password = 2;
}

message RegisterResponse{
  string identity = 1;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse{
  string identity = 1;
  string token = 2;
  string personalToken = 3;
}

message ProlongTokenRequest {
  string token = 1;
}

message ProlongTokenResponse {
  string token = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Prolong(ProlongTokenRequest) returns (ProlongTokenResponse);
}
